# node-v2

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  dev.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml  test.yml
app/: main.py
app/alarm/: constants.py  dtos.py  exceptions.py  repository.py  response_parser.py  response_validator.py  result_parser.py  sender.py  task_parser.py
app/common/: di.py  exceptions.py  logger.py  process_status.py  settings.py
app/common/utils/: exceptions.py  task_parser.py
app/infra/: celeryconfig.py  redis.py
app/node/: constants.py  manager.py  repository.py
app/retry/: constants.py  manager.py  rate_limiter.py
app/unsubscriber/: repository.py  service.py
tests/unit/: conftest.py
tests/unit/alarm/: conftest.py  test_repository.py  test_sender.py  test_task_parser.py  test_validator.py
tests/unit/common/: test_process_status.py
tests/unit/common/utils/: test_task_parser.py
tests/unit/unsubscriber/: conftest.py  test_repository.py  test_service.py
