[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=app --cov-report term-missing:skip-covered"

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
]

[tool.poetry]
name = "node-v2"
version = "0.1.0"
description = "Wakscord Node Server"
authors = ["cdw8431 <cdw8431@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.12.9"
dependency-injector = "^4.47.1"
orjson = "^3.10.18"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.1.0"
redis = "^6.2.0"
urllib3 = "^2.4.0"
cryptography = "^45.0.3"
hiredis = "^3.2.1"
dacite = "^1.9.2"
typing-extensions = "^4.14.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.0"
pre-commit = "^4.2.0"
types-redis = "^4.6.0.20241004"
fakeredis = "^2.29.0"
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"